tests/snapshots/run_wpt_conformance__coreml_l2Pool2d_float16_4D_tensor_options_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
l2Pool2d.https.any.js l2Pool2d float16 4D tensor options.padding, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: l2Pool2d

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    l2Pool2dInput: f16[1, 2, 5, 5];
  }

  nodes {
    [l2Pool2dOutput] = l2Pool2d(l2Pool2dInput, dilations=[], label="", layout="", outputShapeRounding="", outputSizes=null, padding=[1, 0, 0, 1], strides=[], windowDimensions=null);
  }

  outputs { l2Pool2dOutput; }
}
