tests/snapshots/run_wpt_conformance__coreml_l2Pool2d_float32_4D_tensor_all_negative_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
l2Pool2d.https.any.js l2Pool2d float32 4D tensor all negative default options, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: l2Pool2d

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    l2Pool2dInput: f32[1, 2, 5, 5];
  }

  nodes {
    [l2Pool2dOutput] = l2Pool2d(l2Pool2dInput, dilations=[], label="", layout="", outputShapeRounding="", outputSizes=null, padding=[], strides=[], windowDimensions=null);
  }

  outputs { l2Pool2dOutput; }
}
